# gpu-post

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  gpu-setup-test  spacemesh.sln
.github/: release-drafter.yml
.github/tools/: download.go  linux-arm64-install-cuda.sh  linux-arm64-install-vulkan.sh  linux-install-cuda.sh  linux-install-vulkan.sh  macos-install-vulkan.sh  macos-vulkan.sha256  vulkan.sha256  win-cuda.md5  win-install-cuda.sh  win-install-vulkan.sh  win-vulkan.sha256  windows-build.ps1  windows-install-cuda.ps1
.github/workflows/: build.yml  linux.yml  release.yml
.travis/: install-cuda.sh
include/: api.h
lib/: api.c  api.h  api_internal.cpp  api_internal.h  lib.vcxproj  lib.vcxproj.filters  util.c  util.h
lib/cuda/: cuda.cpp  cuda.h  driver-cuda.cpp  driver-cuda.h  keccak.cu  keccak.h  salsa_kernel.cu  salsa_kernel.h  titan_kernel.cu  titan_kernel.h
lib/opencl/: driver-opencl.c  ocl.c  ocl.h  scrypt-chacha.cl
lib/opencl/ICD/: icd_dispatch.h
lib/opencl/ICD/windows/: icd_windows.c
lib/scrypt-jane/: scrypt-jane.cpp
macOS/: .env  kernel-64-001.spirv  kernel-64-002.spirv  kernel-64-003.spirv  kernel-64-004.spirv  kernel-64-005.spirv  kernel-64-006.spirv  kernel-64-007.spirv  kernel-64-008.spirv  kernel-64-016.spirv  kernel-64-032.spirv  kernel-64-255.spirv  kernel-64-256.spirv  libgpu-setup.dylib  libvulkan.1.2.176.dylib  libvulkan.1.dylib
src/: CMakeLists.txt  api.c  api_internal.cpp  api_internal.h  bin2h.cmake  util.c
src/compat/: compat.h  spacemesh-config.h  unistd.h
src/cuda/: cuda.cpp  cuda.h  cuda_helper.h  driver-cuda.cpp  keccak.cu  keccak.h  salsa_kernel.cu  salsa_kernel.h  titan_kernel.cu  titan_kernel.h
src/opencl/: driver-opencl.c  driver-opencl.h  ocl.c  ocl.h  scrypt-chacha.cl
src/opencl/CL/: cl.h  cl_d3d10.h  cl_d3d11.h  cl_dx9_media_sharing.h  cl_egl.h  cl_ext.h  cl_gl.h  cl_gl_ext.h  opencl.h
src/opencl/ICD/: icd.c  icd.h  icd_dispatch.c  icd_dispatch.h
src/opencl/ICD/linux/: icd_linux.c  icd_linux_envvars.c
src/opencl/ICD/windows/: icd_windows.c  icd_windows_dxgk.c  icd_windows_dxgk.h  icd_windows_envvars.c
src/scrypt-jane/: scrypt-jane-portable.h  scrypt-jane-romix-template.h  scrypt-jane.cpp  scrypt-jane.h
src/vulkan/: driver-vulkan.c  driver-vulkan.cpp  driver-vulkan.h  glsl_compiler.cpp  scrypt-chacha.comp  scrypt-jane.comp  vulkan-helpers.c  vulkan-helpers.h
test/: CMakeLists.txt  README.md  integration-tests.cpp  test-vectors.h  test.cpp  test.hpp  test.vcxproj  unit-tests.cpp
